# esmerald_auth_example

./: Makefile  pyproject.toml
esmerald_auth/: main.py  serve.py  urls.py
esmerald_auth/apps/accounts/: backends.py  models.py  tests.py
esmerald_auth/apps/accounts/v1/: controllers.py  schemas.py  urls.py
esmerald_auth/configs/: settings.py
esmerald_auth/configs/development/: settings.py
esmerald_auth/configs/testing/: settings.py
esmerald_auth/tests/: test_app.py
requirements/: base.txt
